Fixed Wrapping issue for application url in deployment dialog.

--- a/wavemaker/wavemaker-studio/src/main/webapp/pages/DeploymentDialog/DeploymentDialog.css
+++ b/wavemaker/wavemaker-studio/src/main/webapp/pages/DeploymentDialog/DeploymentDialog.css
@@ -88,3 +88,7 @@ color: white;
     text-align: center;
     color: white;
 }
+
+div.DeploymentDialog-cjUrlEditor div.wmeditor-readonlyNode a{
+    word-wrap: break-word;
+}
